# MarkWeave

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SIGNING_POLICY.md  SUPPORT.md  eslint.config.js  gumroad-description.txt  index.html  official-site-content.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  robots.txt  sitemap.xml  tsconfig.json  tsconfig.tsbuildinfo  use-cases.html  vite.config.demo.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json  settings.local.json
demo/: DemoApp.tsx  DemoEditor.tsx  DemoSlashMenu.tsx  demo.css  index.html  main.tsx
doc-public/: README.md  gumroad-description.html  gumroad-description.txt  gumroad-source.md  index.html  nav.js  official-site-content.md  use-cases.html
docs/: accessibility-design.md  ai-enhancements-design.md  ai-features.md  cross-platform-design.md  design-coverage.md  document-consistency-analysis.md  editor-ux-design.md  error-handling-design.md  export-design.md  file-operations-design.md  generate-manual.cjs  generate-use-cases.cjs  html-editing-advanced-design.md  image-operations-design.md  image-storage-design.md  keyboard-shortcuts.md  manual-markdown-editing.html  markdown-tiptap-conversion.md  mobile-advanced-design.md  performance-design.md  plugin-api-design.md  roadmap.md  search-design.md  security-design.md  slash-commands-design.md  smart-paste-design.md  split-editor-design.md  system-design.md  testing-strategy-design.md  theme-design.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  updater.rs  watchdog.rs
src-tauri/src/commands/: ai_commands.rs  db_commands.rs  export_commands.rs  fs_commands.rs  git_commands.rs  image_commands.rs  license_commands.rs  mod.rs  plugin_commands.rs  recent_files.rs  search_commands.rs  watch_commands.rs  window_commands.rs  window_sync.rs
src-tauri/src/db/: connection.rs  migrations.rs  queries.rs
src-tauri/src/db/sql/: migration_v1.sql
src-tauri/src/fs/: indexer.rs  markdown_parser.rs  mod.rs  watcher.rs
src-tauri/src/menu/: mod.rs  native_menu.rs
src-tauri/src/models/: error.rs  file_info.rs  mod.rs  settings.rs
(+491 files in other folders)
