[package]
name = "markweave"
version = "0.9.7"
description = "Typora-inspired WYSIWYG MarkWeave"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
notify = "7"
thiserror = "2"
tokio = { version = "1", features = ["fs", "time"] }
dirs = "5"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
futures-util = "0.3"
sha2 = "0.10"
git2 = "0.19"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
mockito = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Shell"] }
